# diabetes-analysis

./: .envrc  .gitignore  ML_Project_Notebook_Final.ipynb  Untitled.ipynb  analisis.ipynb  analisis.py  baseline_results.joblib  flake.nix  lefthook.yml  pyproject.toml  test.py  tmp.md
src/: Untitled.ipynb  env.py  evaluation.py  features.py  modeling.py  processing.py
